[tool.poetry]
name = "dsp-seed-export-parser"
version = "0.1.0"
description = ""
authors = ["Drake Siard <drake.siard@gmail.com>"]
readme = "README.md"
packages = [{include = "dsp_seed_export_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.6.3"
pandas = "^2.0.1"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter-nbextensions-configurator = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
